fix(Tooltip): content can overflow the container, close #240

--- a/components/tooltip/index.styl
+++ b/components/tooltip/index.styl
@@ -12,6 +12,7 @@ arrow-short = $tooltip-arrow-width - 2px
     padding $tooltip-padding
     color $tooltip-color
     line-height $tooltip-line-height
+    word-wrap break-word
     
     // arrow
     > .k-arrow
